# selalib

./: .gitignore  .gitlab-ci.yml  .mailmap  AUTHORS  CMakeLists.txt  CMakeQuickstart.md  CMakeQuickstart.txt  CONTRIBUTING.md  COPYING.txt  CTestConfig.cmake  DEPS_INSTALL.txt  GitQuickstart.md  GitQuickstart.txt  INSTALL  INSTALL.md  LICENSE  README.md  README.txt  RELEASE.md  REPOSITORY_README.txt  advection__doc_8_f90.html  advection__doc_8_f90_source.html  aligned__translation__2d__spaghetti_8_f90.html  aligned__translation__2d__spaghetti_8_f90__incl.map  aligned__translation__2d__spaghetti_8_f90__incl.md5  aligned__translation__2d__spaghetti_8_f90_source.html  annotated.html  assert__doc_8_f90.html  assert__doc_8_f90_source.html  boundary__condition__descriptors__doc_8_f90.html  boundary__condition__descriptors__doc_8_f90_source.html  characteristics__doc_8_f90.html  characteristics__doc_8_f90_source.html  classes.html  classscalar__field__2d__initializer__base.html  classscalar__field__2d__initializer__base__inherit__graph.map  classscalar__field__2d__initializer__base__inherit__graph.md5  classsll__gyroaverage__2d__base.html  classsll__gyroaverage__2d__base__inherit__graph.map  classsll__gyroaverage__2d__base__inherit__graph.md5  (+12874 more)
examples/: CMakeLists.txt  Makefile  landau.F90  landau_parallel.F90  polar_advection.F90
examples/cmake/: FindFFTPACK.cmake  FindSeLaLib.cmake
gysela_public/src/: Bstar_inline.h  CMakeLists.txt  LUsolving.F90  Makefile  Pcross_section.f90  advec1D_BSL.F90  advec1D_BSL.f90  advec2D_BSL.F90  coord_system.F90  ctime.c  diag3D.F90  diag3D.f90  diagnostics.F90  f5D_saving.F90  fequil4d.F90  geometry.f90  globals.F90  gys_alloc.F90  gysela.F90  gysela.f90  init_current.F90  init_magnetic.F90  init_magnetic.f90  init_profile.F90  integration.F90  interpolation.F90  local_spline.F90  mem_alloc.f90  mpiperso.h  output_saving.F90  physics.F90  poisson.F90  poisson.f90  r3_ctlk.c  r3_info.f90  read_data.F90  read_write.F90  remap_inline.F90  resu3D_saving.F90  spline1d.F90  (+2 more)
package/: CMakeLists.txt  make_package.py  makefile_template  selalib-mpi.h  selalib.h
package/cmake/: FindSeLaLib.cmake
package/examples/: landau.F90  landau_parallel.F90  parallel_advection.F90  polar_advection.F90  vlasov_poisson_parallel.F90
package/macports/: CMakeLists.txt  Doxyfile.in
pic2d/src/: CMakeLists.txt  diagno.F90  initialisation.F90  main.F90  maxwell.F90  particules.F90  poisson.F90  quietstart.F90  villasenor.F90  zone.F90
prototype/src/: CMakeLists.txt  CTestConfig.cmake  Doxyfile  Doxyfile.in  DoxygenLayout.xml  Makefile  README  README.txt  SConstruct  check_compiler.F90  conf.py  conf_reference.py  documentation.f90  replace.py
simulations/: CMakeLists.txt  README  simulation_doc.F90
simulations/parallel/: CMakeLists.txt
simulations/serial/: CMakeLists.txt
slv2d/src/: CMakeLists.txt  Makefile  csl2dpp.F90  diagnostiques.F90  diagnostiquesm.F90  diagnostiquesp.F90  fft_module.F90  fftw_solver.F90  fftw_solver_mpi.F90  geometry.F90  interp_non_unif_pp.F90  maxwell2dfdtd.F90  module_mpi.F90  poisson2d_periodic.F90  poisson2ddir.F90  poisson2dpp.F90  poisson2dppPar.F90  poisson2dpp_par.F90  poisson2dpp_seq.F90  precision.F90  selalib.h  silo_module.F90  sll_vlasov2d.F90  sll_vlasov4d.F90  sll_vlasov4d_base.F90  sll_vlasov4d_maxwell.F90  sll_vlasov4d_poisson.F90  sll_vlasov4d_spectral.F90  spectral_vlasov4d.F90  splinenn.F90  splinepp.F90  splinepx.F90  splinepy.F90  test_fftw_mpi.F90  test_poisson2d_par.F90  transpose.F90  vlasov1d.F90  vlasov2d.F90  vlasov2d_csl2d.F90  vlasov2d_dk.F90  (+21 more)
slv2d/vlasov_4d/: CMakeLists.txt  init_functions.F90  local_to_global.F90  scatter.F90  sll_vlasov4d_base.F90  sll_vlasov4d_maxwell.F90  sll_vlasov4d_poisson.F90  sll_vlasov4d_polar.F90  sll_vlasov4d_spectral.F90  sll_vlasov4d_spectral_charge.F90  vm4d_remapper.F90  vm4d_spectral.F90  vm4d_spectral_charge.F90  vp4d_multigrid.F90  vp4d_polar.F90  vp4d_remapper.F90  vp4d_sequential.F90
src/: CMakeLists.txt  Makefile  README.txt  RELEASE.txt  documentation.f90  log
src/AGMG/: CMakeLists.txt  blas_agmg.f  dagmg_mumps.f90  dagmg_par.f90  example_seq.f90  lapack_agmg.f
src/BSL/: CMakeLists.txt  bsl_doc.F90  landau_2d.F90  unit_test_2d_omp.F90
src/CAID_coordinate_transformations/: CMakeLists.txt  caid_coordinate_transformations_doc.F90
src/CMakeModules/: CPackConfig.cmake  DoxygenConfig.cmake  FFTConfig.cmake  FindSCOTCH.cmake  FortranConfig.cmake  HDF5Config.cmake  MPIConfig.cmake  POEConfig.cmake  ParallelTests.cmake  SequentialTests.cmake
src/CSL/: bgk_csl_vf_unif.F90  bgk_fv2.F90  csl_doc.F90
src/add_ons/: CMakeLists.txt
src/advection/: CMakeLists.txt  advection_doc.F90  aligned_translation_2d.F90  aligned_translation_2d_spaghetti.F90  lagrange_interpolation.F90  rotation_2d.F90  sll_advection_1d_BSL.F90  sll_advection_1d_CSL.F90  sll_advection_1d_CSL_periodic.F90  sll_advection_1d_PSM.F90  sll_advection_1d_ampere.F90  sll_advection_1d_base.F90  sll_advection_1d_non_uniform_cubic_splines.F90  sll_advection_1d_periodic.F90  sll_advection_1d_spectral.F90  sll_advection_2d_BSL.F90  sll_advection_2d_CSL.F90  sll_advection_2d_base.F90  sll_advection_2d_integer_oblic.F90  sll_advection_2d_oblic.F90  sll_advection_2d_tensor_product.F90  sll_advection_2d_tri_mesh.F90  sll_m_advection_1d_spectral.F90  unit_test_advection_1d_BSL.F90  unit_test_advection_1d_CSL.F90  unit_test_advection_1d_CSL_periodic.F90  unit_test_advection_1d_PSM.F90  unit_test_advection_1d_ampere.F90  unit_test_advection_1d_non_uniform_cubic_splines.F90  unit_test_advection_1d_periodic.F90  unit_test_advection_1d_spectral.F90  unit_test_advection_2d_BSL.F90  unit_test_advection_2d_CSL.F90  unit_test_advection_2d_integer_oblic.F90  unit_test_advection_2d_oblic.F90  unit_test_advection_2d_tensor_product.F90  unit_test_advection_2d_tri_mesh.F90
src/advection_field/: CMakeLists.txt  advection_field_doc.F90  sll_advection_field.F90
src/ampere_solvers/: CMakeLists.txt  ampere_solvers_doc.F90  sll_ampere_1d_pstd.F90  sll_ampere_vlasov_1d.F90  unit_test_1d_pstd.F90  unit_test_ampere_vlasov_1d.F90
(+6018 files in other folders)
