PROJECT(Landau)
ENABLE_LANGUAGE(Fortran)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/" ${CMAKE_MODULE_PATH})
FIND_PACKAGE(SeLaLib)
FIND_PACKAGE(FFTPACK)
MESSAGE(STATUS "SELALIB_INCLUDES:${SELALIB_INCLUDES}")
MESSAGE(STATUS "SELALIB_LIBRARIES:${SELALIB_LIBRARIES}")
INCLUDE_DIRECTORIES(${SELALIB_INCLUDES})
ADD_EXECUTABLE(landau landau.F90)
TARGET_LINK_LIBRARIES(landau ${SELALIB_LIBRARIES} ${FFTPACK_LIBRARIES})

