ADD_SUBDIRECTORY( add_ons )
ADD_SUBDIRECTORY( data_structures )
ADD_SUBDIRECTORY( field_solvers )
ADD_SUBDIRECTORY( interfaces )
ADD_SUBDIRECTORY( interpolation )
ADD_SUBDIRECTORY( io )
ADD_SUBDIRECTORY( linear_solvers )
ADD_SUBDIRECTORY( low_level_utilities )
ADD_SUBDIRECTORY( mesh )
ADD_SUBDIRECTORY( particle_methods ) # Container for all particle methods (mostly PIC)
ADD_SUBDIRECTORY( quadrature )
ADD_SUBDIRECTORY( semi_lagrangian )
ADD_SUBDIRECTORY( simulation_tools )
ADD_SUBDIRECTORY( splines )
ADD_SUBDIRECTORY( time_integration )

# Parallelization tools
IF( MPI_ENABLED )
   SET(CMAKE_Fortran_COMPILER ${MPI_Fortran_COMPILER})
   ADD_SUBDIRECTORY( parallelization )
ENDIF( MPI_ENABLED )
