add_subdirectory(add_ons)
add_subdirectory(data_structures)
add_subdirectory(field_solvers)
add_subdirectory(interfaces)
add_subdirectory(interpolation)
add_subdirectory(io)
add_subdirectory(linear_solvers)
add_subdirectory(low_level_utilities)
add_subdirectory(mesh)
add_subdirectory(particle_methods) # Container for all particle methods (mostly
                                   # PIC)
add_subdirectory(quadrature)
add_subdirectory(semi_lagrangian)
add_subdirectory(simulation_tools)
add_subdirectory(splines)
add_subdirectory(time_integration)

# Parallelization tools
if(MPI_ENABLED)
  set(CMAKE_Fortran_COMPILER ${MPI_Fortran_COMPILER})
  add_subdirectory(parallelization)
endif(MPI_ENABLED)
